--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
     <div class="pic2">
-        <img src="/images/WhatsApp Image 2024-05-02 at 07.24.14.jpeg" alt="">
+        <img src="images/WhatsApp Image 2024-05-02 at 07.24.14.jpeg" alt="">
     </div>
 
     <div class="pic3">
@@ -100,7 +100,7 @@
 
 
     <div class="pic4">
-        <img src="/images/WhatsApp Image 2024-05-02 at 07.24.17 (2).jpeg" alt="">
+        <img src="images/WhatsApp Image 2024-05-02 at 07.24.17 (2).jpeg" alt="">
     </div>
 
 </div>
@@ -123,8 +123,8 @@
             <p class="galla">We are a dedicated team of digital and media <br>creators, marketers and event planners  who share <br> a common paassion with our clients.Together we <br> create extraordinary brand experiences that help  <br>the business community establish their voice and <br> evaluation.Our work is reowned for its highly <br> crafted design, and its ability- to  <br>drive action.</p>
 
             <div class="gallery">
-                <img class="natu" src="/images/WhatsApp Image 2024-05-03 at 00.13.48.jpeg" alt="">
-                <img class="natural" src="/images/WhatsApp Image 2024-05-03 at 00.13.49.jpeg" alt="" >
+                <img class="natu" src="images/WhatsApp Image 2024-05-03 at 00.13.48.jpeg" alt="">
+                <img class="natural" src="images/WhatsApp Image 2024-05-03 at 00.13.49.jpeg" alt="" >
             </div>
 
         </div>
@@ -136,10 +136,10 @@
         <div class="gun">
 
         <div class="hi">
-            <img  class="deep"  src="/images/WhatsApp Image 2024-05-02 at 07.23.56 (1).jpeg" alt="">
+            <img  class="deep"  src="images/WhatsApp Image 2024-05-02 at 07.23.56 (1).jpeg" alt="">
             <p></p>
         </div>
-            <img  class="nato"  src="/images/WhatsApp Image 2024-05-03 at 00.14.04.jpeg" alt="">
+            <img  class="nato"  src="images/WhatsApp Image 2024-05-03 at 00.14.04.jpeg" alt="">
 
             <p class="second"> We take pride in our ability to deliver complex <br> solutions in a way that you will find effortless and <br>easy.Our process enables us to experiment with<br> ideas of all kinds, deliever on time and stay <br>within your budget</p>
             <a href="#">Find out more</a>
@@ -170,7 +170,7 @@
 
      <div class="good">
         <H5>Events</H5>
-        <img src="/images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
+        <img src="images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
     </div>
    
 
@@ -205,7 +205,7 @@
 
      <div class="bad">
         <H5 class="full">Media</H5>
-        <img class="real"src="/images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
+        <img class="real"src="images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
     </div>
    </div>
 
@@ -223,14 +223,14 @@
     <div class="more">
         
             <div class="very">
-                <img class="food" src="/images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg" alt="">
+                <img class="food" src="images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg" alt="">
                 <h3>Tendai and Farai</h3>
                 <span>Co-founders at ABC company</span>
                 <p>"The team at Tigzozo took the time <br>to understand who we are as a company <br>and gave us a few amaizing marketing<br> plans to choose from.We<br> wholeheartedly recomend TIgzozo media <br>to everyone we know."</p>
             </div>
 
             <div class="name">
-                <img  class="find"  src="/images/WhatsApp Image 2024-05-02 at 07.24.17 (1).jpeg" alt="">
+                <img  class="find"  src="images/WhatsApp Image 2024-05-02 at 07.24.17 (1).jpeg" alt="">
                 <h3>Miranda</h3>
                 <span>Bride</span>
                 <p>"The team at Tigzozo took the time <br>to understand who we are as a couple<br> and gave us a few amaizing marketing<br> plans to choose from. We <br>wholeheartedly recomend Tigzozo media <br>to everyone."</p>
@@ -245,12 +245,12 @@
     <h2>As seen on <span>Instagram</span></h2>
 
     <div class="demo">
-        <img src="/images/WhatsApp Image 2024-05-02 at 07.23.58 (2).jpeg" alt="">
-        <img   class="name" src="/images/WhatsApp Image 2024-05-02 at 07.23.59.jpeg" alt="">
-        <img  src="/images/WhatsApp Image 2024-05-02 at 07.23.59 (1).jpeg" alt="">
-        <img  class="name" src="/images/WhatsApp Image 2024-05-03 at 00.13.46.jpeg" alt="">
-        <img src="/images/WhatsApp Image 2024-05-02 at 07.23.59.jpeg" alt="">
-        <img  class="name" src="/images/WhatsApp Image 2024-05-03 at 00.13.53.jpeg" alt="">
+        <img src="images/WhatsApp Image 2024-05-02 at 07.23.58 (2).jpeg" alt="">
+        <img   class="name" src="images/WhatsApp Image 2024-05-02 at 07.23.59.jpeg" alt="">
+        <img  src="images/WhatsApp Image 2024-05-02 at 07.23.59 (1).jpeg" alt="">
+        <img  class="name" src="images/WhatsApp Image 2024-05-03 at 00.13.46.jpeg" alt="">
+        <img src="images/WhatsApp Image 2024-05-02 at 07.23.59.jpeg" alt="">
+        <img  class="name" src="images/WhatsApp Image 2024-05-03 at 00.13.53.jpeg" alt="">
     </div>
     <div class="kill">
         <p>#tigzozo</p>
@@ -320,6 +320,6 @@
 
 
     <script src="script.js"></script>
-    <script src="/js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
