--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 
      <div class="good">
         <H5>Events</H5>
-        <img src="images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
+        <i class="fa-solid fa-angle-right"></i>
+        
     </div>
    
 
@@ -192,8 +193,8 @@
     <div class="super">
 
     <div class="more">
-        <img src="images/WhatsApp Image 2024-05-02 at 07.23.58 (1).jpeg" alt="">
-        <p></p>
+        <i class="fa-solid fa-xmark"></i>
+        <img src="/images/WhatsApp Image 2024-05-02 at 07.23.57 (1).jpeg" alt="">
     </div>
     
         <h3>Digital services</h3>
@@ -218,7 +219,7 @@
 
      <div class="bad">
         <H5 class="full">Media</H5>
-        <img class="real"src="images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
+        <i class="fa-solid fa-angle-right"></i>
     </div>
    </div>
 
@@ -238,7 +239,7 @@
             <div class="very">
 
                 <div class="kim1">
-                    <img class="visa" src="images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
+                    <i class="fa-solid fa-arrow-right"></i>
                 </div>
 
                 <h3>Tendai and Farai</h3>
@@ -249,7 +250,7 @@
 
             <div class="name">
                 <div class="kim2">
-                    <img class="late" src="images/WhatsApp Image 2024-05-03 at 00.13.58.jpeg" alt="">
+                    <i class="fa-solid fa-arrow-right"></i>
                 </div>
 
                 <h3>Miranda</h3>
