--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <div class="more">
         <i class="fa-solid fa-xmark"></i>
-        <img src="/images/WhatsApp Image 2024-05-02 at 07.23.57 (1).jpeg" alt="">
+        <img src="images/WhatsApp Image 2024-05-02 at 07.23.57 (1).jpeg" alt="">
     </div>
     
         <h3>Digital services</h3>
