--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> 
     <img src="images/WhatsApp Image 2024-05-02 at 07.23.57.jpeg" alt="" onclick="myFunction()" class="hero">
     <div class="overlay-content">
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Testimonials</a>
+      <a href="#About">About</a>
+      <a href="#Services">Services</a>
+      <a href="#Testimonials">Testimonials</a>
     </div>
   
   </div>
@@ -119,7 +119,7 @@
 </div>
 </div>
 
-
+<div id="About">
 <div class="about">
     <h2>About Tigzozo media</h2>
 
@@ -169,10 +169,12 @@
         </div>
     </div>
 
+</div>
 
 
 
 
+<div id="Services">
 <div class="services">
     <h2>Services we offer at Tigzozo media</h2>
 
@@ -228,6 +230,8 @@
 
 </div>
 
+<div id="Testimonials">
+
 <div class="main">
 
     <h2>What our happy clients say about Tegzozo media</h2>
@@ -258,6 +262,10 @@
                 <p>" The team at Tigzozo took the time <br>to understand who we are as a couple<br> and gave us a few amaizing marketing<br> plans to choose from. We <br>wholeheartedly recomend Tigzozo media <br>to everyone."</p>
             </div>
    
+</div>
+
+</div>
+
 </div>
 
 </div>
