--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="main-nav">
 
-            <img src="images/WhatsApp Image 2024-05-02 at 07.24.03.jpeg" alt="logo">
+            <img src="images/logo svg.svg" alt="logo">
 
             <div class="nav-bar">
                 <li><a href="#">About us</a></li>
@@ -28,7 +28,7 @@
                </div>
 
                 <li><a href="#">Testimonials</a></li>
-                <img src="images/WhatsApp Image 2024-05-02 at 07.23.57.jpeg" alt="" onclick="myFunction()" class="hero">
+                <img src="images/file.png" alt="" onclick="myFunction()" class="hero">
             </div>
 
             
@@ -37,7 +37,7 @@
 
     <!-- Button to close the overlay navigation -->
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> 
-    <img src="images/WhatsApp Image 2024-05-02 at 07.23.57.jpeg" alt="" onclick="myFunction()" class="hero">
+    <img src="images/file.png" alt="" onclick="myFunction()" class="hero">
     <div class="overlay-content">
       <a href="#About">About</a>
       <a href="#Services">Services</a>
@@ -77,7 +77,7 @@
     </div>
 
 <div class="fill">
-    <p> <i class="fa-regular fa-circle-play"></i>watch our latest vedio</p>
+    <p> <i class="fa-regular fa-circle-play"></i>watch our latest video</p>
    
     <p><i class="fa-regular fa-circle-check"></i>Trusted by reputable organisations</p>
  
@@ -207,7 +207,7 @@
             <li><p>Colletaral  design</p></li>
             <li><p>Coperate identity</p></li>
             <li><p>Trade show support</p></li>
-            <li><p>Ditoral development</p></li>
+            <li><p>Editoral development</p></li>
             <li><p>Photography </p></li>
             <li><p>Websites </p></li>
             <li><p>Apps </p></li>
@@ -234,7 +234,7 @@
 
 <div class="main">
 
-    <h2>What our happy clients say about Tegzozo media</h2>
+    <h2>What our happy clients say about Tigzozo media</h2>
 
     <div class="get">
 
