--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googlseapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 
 <body>
@@ -195,8 +196,8 @@
     <div class="super">
 
     <div class="more">
-        <i class="fa-solid fa-xmark"></i>
-        <img src="images/WhatsApp Image 2024-05-02 at 07.23.57 (1).jpeg" alt="">
+         <i class="fa-solid fa-xmark"></i>
+        
     </div>
     
         <h3>Digital services</h3>
